--- a/index.html
+++ b/index.html
@@ -1,37 +1,33 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" class="aurora-outer">
 <head>
     <meta charset="UTF-8">
     <title>LeadyUp</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-    <header>
-        <h1>Accueil</h1>
-    </header>
+<body class="aurora-inner">
     <main>
-        <section>
-            <h2>Présentation</h2>
-            <p>Lor
-            em ipsum dolor sit amet, consectetur adipiscing elit. Donec auctor, nisl eget ultricies ultricies, nunc nunc ultricies nunc, quis ul
-            trices nisl nisl nec nunc. Donec auctor, nisl eget ultricies ultricies, nunc nunc ultricies nunc, quis ultrices nisl nisl nec nunc. Donec auctor, nisl eget ultricies ultricies, nunc nunc ultricies nunc, quis ultrices nisl nisl nec nunc. Donec auctor, nisl eget ultricies ultricies, nunc nunc ultricies nunc, quis ultrices nisl nisl nec nunc. Donec auctor, nisl eget ultricies ultricies, nunc nunc ultricies nunc, quis ultrices nisl nisl nec nunc. Donec auctor, nisl eget ultricies ultricies, nunc nunc ultricies nunc, quis ultrices nisl nisl nec nunc. Donec auctor, nisl eget ultricies ultricies, nunc nunc ultricies nunc, quis ultrices nisl nisl nec nunc. Donec auctor, nisl eget ultricies ultricies, nunc nunc ultricies nunc, quis ultrices nisl nisl nec nunc.</p>
+        <section class="first-section">
+            <div>
+                <h1>Envie de <b>booster</b>
+                    votre activité de Conseiller
+                    en Gestion de Patrimoine ?</h1>
+                <p>Avec LeadyUp, développez 
+                    votre réseau de partenaires et les liens avec
+                    vos clients pour booster votre activité.</p>
+            </div>
+            <div>
+                <img src="img/illustration.png" alt="Illustration">
+            </div>
         </section>
-        <section>
-            <h2>Formulaire</h2>
-            <form action="traitement.php" method="post">
-                <label for="nom">Nom</label>
-                <input type="text" name="nom" id="nom" placeholder="Nom" required>
-                <label for="prenom">Prénom</label>
-                <input type="text" name="prenom" id="prenom" placeholder="Prénom" required>
-                <label for="email">Email</label>
-                <input type="email" name="email" id="email" placeholder="Email" required>
-                <label for="message">Message</label>
-                <textarea name="message" id="message" cols="30" rows="10" placeholder="Message" required></textarea>
-                <input type="submit" value="Envoyer">
-            </form>
+        <section class="second-section">
+            <div>
+                <h2>Restez informé de la sortie de l'application :</h2>
+                <div>
+                    <input type="text" placeholder="Votre adresse email">
+                    <button>Je m'inscris</button>
+                </div>
+            </div>
         </section>
     </main>
-    <footer>
-        <p>© 2023 - Tous droits réservés</p>
-    </footer>
 </html>
