--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="fr" class="aurora-outer">
 <head>
     <meta charset="UTF-8">
-    <title>LeadyUp</title>
+    <title>LeadyUp - Boostez votre activité de CGP</title>
     <link rel="stylesheet" href="css/style.css">
+    <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1.5">
 </head>
 <body class="aurora-inner">
     <main>
