--- a/index.html
+++ b/index.html
@@ -14,12 +14,10 @@
     <main>
         <section class="first-section">
             <div>
-                <h1>Envie de <b>booster</b>
-                    votre activité de Conseiller
-                    en Gestion de Patrimoine ?</h1>
-                <p>Avec LeadyUp, développez 
-                    votre réseau de partenaires et les liens avec
-                    vos clients pour booster votre activité.</p>
+                <h1>La <b>gestion de patrimoine</b>
+                    modernisée arrive bientôt sur 
+                    vos téléphones.</h1>
+                <p></p>
             </div>
             <div>
                 <img src="img/illustration.png" alt="Illustration">
