--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <main>
         <section class="first-section">
             <div>
-                <h1>La <b>gestion de patrimoine</b>
-                    modernisée arrive bientôt sur 
+                <h1>La gestion de patrimoine
+                    <b>modernisée</b> arrive bientôt sur 
                     vos téléphones.</h1>
                 <p></p>
             </div>
