add openapp file

--- a/openapp.html
+++ b/openapp.html
@@ -18,7 +18,7 @@
     </script>
 </head>
 <body onload="openApp()">
-    <h1>Redirecting to Leadyup App</h1>
-    <p>If the app doesn't open, please install the app from the app store.</p>
+    <h1>Nous vous redirigeons vers l'application LeadyUp</h1>
+    <p>Si l'application ne s'ouvre pas, veuillez l'installer à partir du store.</p>
 </body>
 </html>
