--- a/index.html
+++ b/index.html
@@ -25,11 +25,8 @@
         </section>
         <section class="second-section">
             <div>
-                <h2>Restez informé de la sortie de l'application :</h2>
-                <div>
-                    <input type="text" placeholder="Votre adresse email">
-                    <button>Je m'inscris</button>
-                </div>
+                <h2>Pour le moment, l'application est réservée à un public limité.</h2>
+                <h2>Restez à l'affût, nous ouvrirons bientôt les inscriptions à une liste d'attente :)</h2>
             </div>
         </section>
     </main>
